+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6 alpha 1?
=================================

*Release date: XX-XXX-2008*

Core and builtins
-----------------

- Issue #1865: Bytes as an alias for str and b"" as an alias "" were
  added.

- sys.float_info / PyFloat_GetInfo: The floating point information
  object was converted from a dict to a specialized structseq object.

- Patch #1816: Added sys.flags structseq. It exposes the status of most
  command line arguments and PYTHON* environment variables. 

- Object/structseq.c: Implemented new structseq representation. The patch
  makes structseqs (e.g. the return value of os.stat) more readable.

- Patch #1700288: added a type attribute cache that caches method accesses,
  resulting in speedups in heavily object-oriented code.

- Bug #1776: __import__() no longer accepts filenames on any platform.
  The first parameter to __import__() must be a valid module name.

- Patch #1668: renamed THREADDEBUG envvar to PYTHONTHREADDEBUG.

- Patch #602345: Add -B command line option, PYTHONDONTWRITEBYTECODE envvar
  and sys.dont_write_bytecode attribute. All these can be set to forbid Python
  to attempt to write compiled bytecode files.

- Improve some exception messages when Windows fails to load an extension
  module. Now we get for example '%1 is not a valid Win32 application' instead
  of 'error code 193'.

- Bug #1481296: Fixed long(float('nan'))!=0L.

- Issue #1640: Added math.isinf(x), math.isnan(x) and math.copysign(x, y)
  functions.

- Issue #1635: Platform independent creation and representation of NaN
  and INF. float("nan"), float("inf") and float("-inf") now work on every
  platform with IEEE 754 semantics.

- Compiler now generates simpler and faster code for dictionary literals.
  The oparg for BUILD_MAP now indicates an estimated dictionary size.
  There is a new opcode, STORE_MAP, for adding entries to the dictionary.
